--- a/index.html
+++ b/index.html
@@ -44,17 +44,26 @@
         <div id="productos-down">
             <div class="contenedor-producto">
                 <img src="" alt="" class="imagen-producto">
-                <p class="descripcion-producto"></p>
+                <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Officia quae eligendi voluptas non tempora atque sit odit 
+                                                harum similique illum illo dignissimos earum magni maxime 
+                                                a animi eveniet, necessitatibus soluta!</p>
                 <button class="boton-producto"></button>
             </div>
             <div class="contenedor-producto">
                 <img src="" alt="" class="imagen-producto">
-                <p class="descripcion-producto"></p>
+                <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Officia quae eligendi voluptas non tempora atque sit odit 
+                                                harum similique illum illo dignissimos earum magni maxime 
+                                                a animi eveniet, necessitatibus soluta!</p>
                 <button class="boton-producto"></button>
             </div>
             <div class="contenedor-producto">
                 <img src="" alt="" class="imagen-producto">
-                <p class="descripcion-producto"></p>
+                <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Officia quae eligendi voluptas non tempora atque sit odit 
+                                                harum similique illum illo dignissimos earum magni maxime 
+                                                a animi eveniet, necessitatibus soluta!</p>
                 <button class="boton-producto"></button>
             </div>
         </div>
