estilos sección main

--- a/index.html
+++ b/index.html
@@ -31,10 +31,14 @@
                 dolorem itaque temporibus suscipit quos aut iste, tempore illo error expedita 
                 eaque, numquam libero consequatur unde. Similique aut illo doloribus.<br>
             </p>
-            <input type="text">
+            <div id="input-caja">
+                <input type="text">
+                <button class="input-button">Suscríbete</button>
+            </div>
+            
         </div>
         <div id="main-right">
-            <img src="" alt="" id="imagen-artistica">
+            <img src="src/images/fotomain.JPG" alt="midicontroller">
         </div>
     </main>
 
@@ -57,7 +61,7 @@
                                                 Officia quae eligendi voluptas non tempora atque sit odit 
                                                 harum similique illum illo dignissimos earum magni maxime 
                                                 a animi eveniet, necessitatibus soluta!</p>
-                <button class="boton-producto"></button>
+                <button class="boton-producto">Comprar</button>
             </div>
             <div class="contenedor-producto">
                 <img src="" alt="" class="imagen-producto">
