--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                                 Officia quae eligendi voluptas non tempora atque sit odit 
                                                 harum similique illum illo dignissimos earum magni maxime 
                                                 a animi eveniet, necessitatibus soluta!</p>
-                <button class="boton-producto"></button>
+                <button class="boton-producto">Comprar</button>
             </div>
             <div class="contenedor-producto">
                 <img src="" alt="" class="imagen-producto">
@@ -69,7 +69,7 @@
                                                 Officia quae eligendi voluptas non tempora atque sit odit 
                                                 harum similique illum illo dignissimos earum magni maxime 
                                                 a animi eveniet, necessitatibus soluta!</p>
-                <button class="boton-producto"></button>
+                <button class="boton-producto">Comprar</button>
             </div>
         </div>
     </div>
