--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <img src="src/images/logoblanco.png" alt="" id="logo">
         <nav>
             <ul>
-                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#main-left">Inicio</a></li>
                 <li><a href="#productos">Productos</a></li>
                 <li><a href="#demo">Demo</a></li>
-                <li><a href="#contacto">Contacto</a></li>
+                <li><a href="#footer">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -48,7 +48,7 @@
         </div>
         <div id="productos-down">
             <div class="contenedor-producto">
-                <img src="" alt="" class="imagen-producto">
+                <img src="src/images/01.JPG" alt="" class="imagen-producto">
                 <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                                 Officia quae eligendi voluptas non tempora atque sit odit 
                                                 harum similique illum illo dignissimos earum magni maxime 
@@ -56,7 +56,7 @@
                 <button class="boton-producto">Comprar</button>
             </div>
             <div class="contenedor-producto">
-                <img src="" alt="" class="imagen-producto">
+                <img src="src/images/02.JPG" alt="" class="imagen-producto">
                 <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                                 Officia quae eligendi voluptas non tempora atque sit odit 
                                                 harum similique illum illo dignissimos earum magni maxime 
@@ -64,7 +64,7 @@
                 <button class="boton-producto">Comprar</button>
             </div>
             <div class="contenedor-producto">
-                <img src="" alt="" class="imagen-producto">
+                <img src="src/images/03.JPG" alt="" class="imagen-producto">
                 <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                                 Officia quae eligendi voluptas non tempora atque sit odit 
                                                 harum similique illum illo dignissimos earum magni maxime 
@@ -76,10 +76,12 @@
 
     <div id="demo">
         <h2>Uno de nuestros controladores en acción</h2>
-        <video src=""></video>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/nzioEh9V7OI?si=ozgQE-Yk7_viVGp3" 
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
-    <footer>
+    <footer id="footer">
         <div class="footer-content">
           <div class="footer-contacto">
             <h3>Contáctanos</h3>
@@ -99,6 +101,6 @@
         <div class="footer-final">
           &copy; 2024 ToquiControl. Todos los derechos reservados.
         </div>
-      </footer>
+    </footer>
 </body>
 </html>
