--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
                 <input type="text">
                 <button class="input-button">Suscríbete</button>
             </div>
-            
         </div>
         <div id="main-right">
             <img src="src/images/fotomain.JPG" alt="midicontroller">
@@ -47,6 +46,30 @@
             <h2>Algunos de nuestros productos</h2>
         </div>
         <div id="productos-down">
+            <div class="contenedor-producto">
+                <img src="src/images/01.JPG" alt="" class="imagen-producto">
+                <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Officia quae eligendi voluptas non tempora atque sit odit 
+                                                harum similique illum illo dignissimos earum magni maxime 
+                                                a animi eveniet, necessitatibus soluta!</p>
+                <button class="boton-producto">Comprar</button>
+            </div>
+            <div class="contenedor-producto">
+                <img src="src/images/02.JPG" alt="" class="imagen-producto">
+                <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Officia quae eligendi voluptas non tempora atque sit odit 
+                                                harum similique illum illo dignissimos earum magni maxime 
+                                                a animi eveniet, necessitatibus soluta!</p>
+                <button class="boton-producto">Comprar</button>
+            </div>
+            <div class="contenedor-producto">
+                <img src="src/images/03.JPG" alt="" class="imagen-producto">
+                <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Officia quae eligendi voluptas non tempora atque sit odit 
+                                                harum similique illum illo dignissimos earum magni maxime 
+                                                a animi eveniet, necessitatibus soluta!</p>
+                <button class="boton-producto">Comprar</button>
+            </div>
             <div class="contenedor-producto">
                 <img src="src/images/01.JPG" alt="" class="imagen-producto">
                 <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
