cambios de colores

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="color1">
         <img src="src/images/logoblanco.png" alt="" id="logo">
         <nav>
             <ul>
@@ -21,7 +21,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="color2">
         <div id="main-left">
             <h1>ToquiControl, un controlador a tu medida</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam consectetur 
@@ -41,7 +41,7 @@
         </div>
     </main>
 
-    <div id="productos">
+    <div id="productos" class="color3">
         <div id="productos-up">
             <h2>Algunos de nuestros productos</h2>
         </div>
