formulario de contacto

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,26 +10,26 @@
 </head>
 
 <body>
-    <header class="color1">
+    <header>
         <img src="src/images/logoblanco.png" alt="" id="logo">
         <nav>
             <ul>
                 <li><a href="#main-left">Inicio</a></li>
                 <li><a href="#productos">Productos</a></li>
                 <li><a href="#demo">Demo</a></li>
-                <li><a href="#footer">Contacto</a></li>
+                <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
     </header>
 
-    <main class="color2">
+    <main>
         <div id="main-left">
             <h1>ToquiControl, un controlador a tu medida</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam consectetur 
-                dolorem itaque temporibus suscipit quos aut iste, tempore illo error expedita 
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam consectetur
+                dolorem itaque temporibus suscipit quos aut iste, tempore illo error expedita
                 eaque, numquam libero consequatur unde. Similique aut illo doloribus.<br>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam consectetur 
-                dolorem itaque temporibus suscipit quos aut iste, tempore illo error expedita 
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam consectetur
+                dolorem itaque temporibus suscipit quos aut iste, tempore illo error expedita
                 eaque, numquam libero consequatur unde. Similique aut illo doloribus.<br>
             </p>
             <div id="input-caja">
@@ -41,7 +42,7 @@
         </div>
     </main>
 
-    <div id="productos" class="color3">
+    <div id="productos">
         <div id="productos-up">
             <h2>Algunos de nuestros productos</h2>
         </div>
@@ -49,49 +50,49 @@
             <div class="contenedor-producto">
                 <img src="src/images/01.JPG" alt="" class="imagen-producto">
                 <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                                Officia quae eligendi voluptas non tempora atque sit odit 
-                                                harum similique illum illo dignissimos earum magni maxime 
-                                                a animi eveniet, necessitatibus soluta!</p>
+                    Officia quae eligendi voluptas non tempora atque sit odit
+                    harum similique illum illo dignissimos earum magni maxime
+                    a animi eveniet, necessitatibus soluta!</p>
                 <button class="boton-producto">Comprar</button>
             </div>
             <div class="contenedor-producto">
                 <img src="src/images/02.JPG" alt="" class="imagen-producto">
                 <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                                Officia quae eligendi voluptas non tempora atque sit odit 
-                                                harum similique illum illo dignissimos earum magni maxime 
-                                                a animi eveniet, necessitatibus soluta!</p>
+                    Officia quae eligendi voluptas non tempora atque sit odit
+                    harum similique illum illo dignissimos earum magni maxime
+                    a animi eveniet, necessitatibus soluta!</p>
                 <button class="boton-producto">Comprar</button>
             </div>
             <div class="contenedor-producto">
                 <img src="src/images/03.JPG" alt="" class="imagen-producto">
                 <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                                Officia quae eligendi voluptas non tempora atque sit odit 
-                                                harum similique illum illo dignissimos earum magni maxime 
-                                                a animi eveniet, necessitatibus soluta!</p>
+                    Officia quae eligendi voluptas non tempora atque sit odit
+                    harum similique illum illo dignissimos earum magni maxime
+                    a animi eveniet, necessitatibus soluta!</p>
                 <button class="boton-producto">Comprar</button>
             </div>
             <div class="contenedor-producto">
                 <img src="src/images/01.JPG" alt="" class="imagen-producto">
                 <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                                Officia quae eligendi voluptas non tempora atque sit odit 
-                                                harum similique illum illo dignissimos earum magni maxime 
-                                                a animi eveniet, necessitatibus soluta!</p>
+                    Officia quae eligendi voluptas non tempora atque sit odit
+                    harum similique illum illo dignissimos earum magni maxime
+                    a animi eveniet, necessitatibus soluta!</p>
                 <button class="boton-producto">Comprar</button>
             </div>
             <div class="contenedor-producto">
                 <img src="src/images/02.JPG" alt="" class="imagen-producto">
                 <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                                Officia quae eligendi voluptas non tempora atque sit odit 
-                                                harum similique illum illo dignissimos earum magni maxime 
-                                                a animi eveniet, necessitatibus soluta!</p>
+                    Officia quae eligendi voluptas non tempora atque sit odit
+                    harum similique illum illo dignissimos earum magni maxime
+                    a animi eveniet, necessitatibus soluta!</p>
                 <button class="boton-producto">Comprar</button>
             </div>
             <div class="contenedor-producto">
                 <img src="src/images/03.JPG" alt="" class="imagen-producto">
                 <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                                Officia quae eligendi voluptas non tempora atque sit odit 
-                                                harum similique illum illo dignissimos earum magni maxime 
-                                                a animi eveniet, necessitatibus soluta!</p>
+                    Officia quae eligendi voluptas non tempora atque sit odit
+                    harum similique illum illo dignissimos earum magni maxime
+                    a animi eveniet, necessitatibus soluta!</p>
                 <button class="boton-producto">Comprar</button>
             </div>
         </div>
@@ -99,31 +100,60 @@
 
     <div id="demo">
         <h2>Uno de nuestros controladores en acción</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/nzioEh9V7OI?si=ozgQE-Yk7_viVGp3" 
-        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/nzioEh9V7OI?si=ozgQE-Yk7_viVGp3"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+
+    <div id="contacto">
+        <div id="contacto-derecha">
+            <h3>Contacto</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum modi tempore iure tenetur cupiditate
+                architecto quo, id facere expedita, animi quis veniam earum iusto nulla ullam rem adipisci? Id, eveniet.
+            </p>
+            <img src="https://www.svgrepo.com/show/521128/email-1.svg" alt="email">
+        </div>
+        <form>
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre" name="nombre" required>
+
+            <label for="apellido">Apellido:</label>
+            <input type="text" id="apellido" name="apellido" required>
+
+            <label for="email">E-mail:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="mensaje">Mensaje:</label>
+            <textarea id="mensaje" name="mensaje" rows="4" cols="50" placeholder="Escribe tu mensaje aquí..."
+                required></textarea>
+
+            <input type="submit" value="Enviar" id="boton">
+        </form>
     </div>
 
     <footer id="footer">
         <div class="footer-content">
-          <div class="footer-contacto">
-            <h3>Contáctanos</h3>
-            <p>Email: info@toquicontrol.com</p>
-            <p>Teléfono: +56 1234 5678</p>
-            <p>Dirección: Avenida 123, Santiago, Chile</p>
-          </div>
-      
-          <div class="footer-redes">
-            <h3>Síguenos</h3>
-            <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
-            <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
-            <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
-          </div>
+            <div class="footer-contacto">
+                <h3>Contáctanos</h3>
+                <p>Email: info@toquicontrol.com</p>
+                <p>Teléfono: +56 1234 5678</p>
+                <p>Dirección: Avenida 123, Santiago, Chile</p>
+            </div>
+
+            <div class="footer-redes">
+                <h3>Síguenos</h3>
+                <a href="https://www.facebook.com/toquicontrol"><img src="src/images/facebook-icon.png" alt="Facebook"></a>
+                <a href="https://www.twitter.com"><img src="src/images/twitter-icon.png" alt="Twitter"></a>
+                <a href="https://www.instagram.com/toquicontrol"><img src="src/images/instagram-icon.png" alt="Instagram"></a>
+            </div>
         </div>
-      
+
         <div class="footer-final">
-          &copy; 2024 ToquiControl. Todos los derechos reservados.
+            &copy; 2024 ToquiControl. Todos los derechos reservados.
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
+
 </html>
