se agrega video y funciones js

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 eaque, numquam libero consequatur unde. Similique aut illo doloribus.<br>
             </p>
             <div id="input-caja">
-                <input type="text">
-                <button class="input-button">Suscríbete</button>
+                <input type="text" id="input-suscribete">
+                <button id="button-suscribete">Suscríbete</button>
             </div>
         </div>
         <div id="main-right">
@@ -100,10 +100,13 @@
 
     <div id="demo">
         <h2>Uno de nuestros controladores en acción</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/nzioEh9V7OI?si=ozgQE-Yk7_viVGp3"
+        <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/nzioEh9V7OI?si=ozgQE-Yk7_viVGp3"
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
+            <video id="demo-video" controls>
+                <source src="src/video/demo.mp4" type="video/mp4">
+            </video>
     </div>
 
     <div id="contacto">
