--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div id="main-right">
-            <img src="src/images/fotomain.JPG" alt="midicontroller">
+            <img src="https://images.unsplash.com/photo-1703117104853-31800b2e2a70?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="midicontroller">
         </div>
     </main>
 
@@ -48,7 +48,8 @@
         </div>
         <div id="productos-down">
             <div class="contenedor-producto">
-                <img src="src/images/01.JPG" alt="" class="imagen-producto">
+                <img src="https://images.unsplash.com/photo-1522870389523-7e83c0065eaf?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    alt="" class="imagen-producto">
                 <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Officia quae eligendi voluptas non tempora atque sit odit
                     harum similique illum illo dignissimos earum magni maxime
@@ -56,7 +57,8 @@
                 <button class="boton-producto">Comprar</button>
             </div>
             <div class="contenedor-producto">
-                <img src="src/images/02.JPG" alt="" class="imagen-producto">
+                <img src="https://images.unsplash.com/photo-1705057261328-ddff6bdad39a?q=80&w=2069&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    alt="" class="imagen-producto">
                 <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Officia quae eligendi voluptas non tempora atque sit odit
                     harum similique illum illo dignissimos earum magni maxime
@@ -64,7 +66,7 @@
                 <button class="boton-producto">Comprar</button>
             </div>
             <div class="contenedor-producto">
-                <img src="src/images/03.JPG" alt="" class="imagen-producto">
+                <img src="https://images.unsplash.com/photo-1643989996350-01addb8c8228?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" class="imagen-producto">
                 <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Officia quae eligendi voluptas non tempora atque sit odit
                     harum similique illum illo dignissimos earum magni maxime
@@ -72,7 +74,7 @@
                 <button class="boton-producto">Comprar</button>
             </div>
             <div class="contenedor-producto">
-                <img src="src/images/01.JPG" alt="" class="imagen-producto">
+                <img src="https://images.unsplash.com/photo-1703117405609-7c34bc8a7c85?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" class="imagen-producto">
                 <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Officia quae eligendi voluptas non tempora atque sit odit
                     harum similique illum illo dignissimos earum magni maxime
@@ -80,7 +82,7 @@
                 <button class="boton-producto">Comprar</button>
             </div>
             <div class="contenedor-producto">
-                <img src="src/images/02.JPG" alt="" class="imagen-producto">
+                <img src="https://images.unsplash.com/photo-1511671782779-c97d3d27a1d4?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" class="imagen-producto">
                 <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Officia quae eligendi voluptas non tempora atque sit odit
                     harum similique illum illo dignissimos earum magni maxime
@@ -88,7 +90,7 @@
                 <button class="boton-producto">Comprar</button>
             </div>
             <div class="contenedor-producto">
-                <img src="src/images/03.JPG" alt="" class="imagen-producto">
+                <img src="https://plus.unsplash.com/premium_photo-1682124293900-54bea8ca7e9f?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" class="imagen-producto">
                 <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Officia quae eligendi voluptas non tempora atque sit odit
                     harum similique illum illo dignissimos earum magni maxime
@@ -100,13 +102,9 @@
 
     <div id="demo">
         <h2>Uno de nuestros controladores en acción</h2>
-        <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/nzioEh9V7OI?si=ozgQE-Yk7_viVGp3"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
-            <video id="demo-video" controls>
-                <source src="src/video/demo.mp4" type="video/mp4">
-            </video>
+        <video id="demo-video" controls>
+            <source src="src/video/demo.mp4" type="video/mp4">
+        </video>
     </div>
 
     <div id="contacto">
@@ -146,9 +144,11 @@
 
             <div class="footer-redes">
                 <h3>Síguenos</h3>
-                <a href="https://www.facebook.com/toquicontrol"><img src="src/images/facebook-icon.png" alt="Facebook"></a>
+                <a href="https://www.facebook.com/toquicontrol"><img src="src/images/facebook-icon.png"
+                        alt="Facebook"></a>
                 <a href="https://www.twitter.com"><img src="src/images/twitter-icon.png" alt="Twitter"></a>
-                <a href="https://www.instagram.com/toquicontrol"><img src="src/images/instagram-icon.png" alt="Instagram"></a>
+                <a href="https://www.instagram.com/toquicontrol"><img src="src/images/instagram-icon.png"
+                        alt="Instagram"></a>
             </div>
         </div>
 
