ajustes de colores, imagenes y detalles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="color1">
         <img src="src/images/logoblanco.png" alt="" id="logo">
         <nav>
             <ul>
@@ -22,15 +22,15 @@
         </nav>
     </header>
 
-    <main>
+    <main class="color2">
         <div id="main-left">
             <h1>ToquiControl, un controlador a tu medida</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam consectetur
-                dolorem itaque temporibus suscipit quos aut iste, tempore illo error expedita
-                eaque, numquam libero consequatur unde. Similique aut illo doloribus.<br>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam consectetur
-                dolorem itaque temporibus suscipit quos aut iste, tempore illo error expedita
-                eaque, numquam libero consequatur unde. Similique aut illo doloribus.<br>
+            <p>ToquiControl es una marca innovadora dedicada al diseño y desarrollo de controladores MIDI
+                personalizados, ideales para músicos, productores y creadores de contenido digital. Nos especializamos
+                en crear dispositivos intuitivos, potentes y fáciles de usar, diseñados para mejorar tu flujo de trabajo
+                y creatividad. ¡No te pierdas nuestras novedades y lanzamientos exclusivos! Deja tu correo y suscríbete
+                para recibir noticias, promociones especiales y actualizaciones directamente en tu bandeja de entrada.
+                ¡Únete a la comunidad de ToquiControl hoy mismo!
             </p>
             <div id="input-caja">
                 <input type="text" id="input-suscribete">
@@ -38,82 +38,76 @@
             </div>
         </div>
         <div id="main-right">
-            <img src="https://images.unsplash.com/photo-1703117104853-31800b2e2a70?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="midicontroller">
+            <img src="src/images/img01.avif" alt="midicontroller">
         </div>
     </main>
 
-    <div id="productos">
+    <div id="productos" class="color3">
         <div id="productos-up">
             <h2>Algunos de nuestros productos</h2>
         </div>
         <div id="productos-down">
             <div class="contenedor-producto">
-                <img src="https://images.unsplash.com/photo-1522870389523-7e83c0065eaf?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                    alt="" class="imagen-producto">
-                <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Officia quae eligendi voluptas non tempora atque sit odit
-                    harum similique illum illo dignissimos earum magni maxime
-                    a animi eveniet, necessitatibus soluta!</p>
+                <img src="src/images/img02.avif" alt="midicontroller" class="imagen-producto">
+                <p class="descripcion-producto">El ToquiControl Key II es un controlador MIDI compacto de 2 octavas,
+                    ideal para músicos en movimiento. Con teclas sensibles y un diseño portátil, ofrece gran
+                    versatilidad para tus composiciones y actuaciones.</p>
                 <button class="boton-producto">Comprar</button>
             </div>
             <div class="contenedor-producto">
-                <img src="https://images.unsplash.com/photo-1705057261328-ddff6bdad39a?q=80&w=2069&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                    alt="" class="imagen-producto">
-                <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Officia quae eligendi voluptas non tempora atque sit odit
-                    harum similique illum illo dignissimos earum magni maxime
-                    a animi eveniet, necessitatibus soluta!</p>
+                <img src="src/images/img03.avif" alt="midicontroller" class="imagen-producto">
+                <p class="descripcion-producto">El ToquiControl Mini Midi Pad es un controlador compacto con 8 pads
+                    sensibles al tacto. Ideal para producciones musicales, ofrece alta precisión y portabilidad para
+                    creadores que buscan simplicidad y potencia.</p>
                 <button class="boton-producto">Comprar</button>
             </div>
             <div class="contenedor-producto">
-                <img src="https://images.unsplash.com/photo-1643989996350-01addb8c8228?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" class="imagen-producto">
-                <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Officia quae eligendi voluptas non tempora atque sit odit
-                    harum similique illum illo dignissimos earum magni maxime
-                    a animi eveniet, necessitatibus soluta!</p>
+                <img src="src/images/img04.avif" alt="midicontroller" class="imagen-producto">
+                <p class="descripcion-producto">El ToquiControl MasterPad es un avanzado controlador MIDI con 32 pads
+                    táctiles. Diseñado para creadores profesionales, ofrece máxima precisión, personalización y control
+                    total en cada actuación o producción musical.</p>
                 <button class="boton-producto">Comprar</button>
             </div>
             <div class="contenedor-producto">
-                <img src="https://images.unsplash.com/photo-1703117405609-7c34bc8a7c85?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" class="imagen-producto">
-                <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Officia quae eligendi voluptas non tempora atque sit odit
-                    harum similique illum illo dignissimos earum magni maxime
-                    a animi eveniet, necessitatibus soluta!</p>
+                <img src="src/images/img01.avif" alt="midicontroller" class="imagen-producto">
+                <p class="descripcion-producto">El ToquiControl CS-004 es una potente superficie de control con
+                    protocolo Mackie Control, diseñada para manejar tu DAW con precisión. Incluye faders motorizados y
+                    controles intuitivos para mejorar tu flujo de trabajo.</p>
                 <button class="boton-producto">Comprar</button>
             </div>
             <div class="contenedor-producto">
-                <img src="https://images.unsplash.com/photo-1511671782779-c97d3d27a1d4?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" class="imagen-producto">
-                <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Officia quae eligendi voluptas non tempora atque sit odit
-                    harum similique illum illo dignissimos earum magni maxime
-                    a animi eveniet, necessitatibus soluta!</p>
+                <img src="src/images/img05.avif" alt="midicontroller" class="imagen-producto">
+                <p class="descripcion-producto">El ToquiMic es un innovador controlador MIDI que convierte tu voz en
+                    mensajes MIDI en tiempo real. Ideal para productores y vocalistas, permite controlar sintetizadores
+                    y efectos con precisión vocal.</p>
                 <button class="boton-producto">Comprar</button>
             </div>
             <div class="contenedor-producto">
-                <img src="https://plus.unsplash.com/premium_photo-1682124293900-54bea8ca7e9f?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" class="imagen-producto">
-                <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Officia quae eligendi voluptas non tempora atque sit odit
-                    harum similique illum illo dignissimos earum magni maxime
-                    a animi eveniet, necessitatibus soluta!</p>
+                <img src="src/images/img06.avif" alt="midicontroller" class="imagen-producto">
+                <p class="descripcion-producto">El ToquiControl CS-005 es una superficie de control portátil ideal para
+                    producción musical. Con controles táctiles y diseño compacto, ofrece flexibilidad y control total en
+                    cualquier entorno creativo.</p>
                 <button class="boton-producto">Comprar</button>
             </div>
         </div>
     </div>
 
-    <div id="demo">
+    <div id="demo" class="color2">
         <h2>Uno de nuestros controladores en acción</h2>
         <video id="demo-video" controls>
             <source src="src/video/demo.mp4" type="video/mp4">
         </video>
     </div>
 
-    <div id="contacto">
+    <div id="contacto" class="color3">
         <div id="contacto-derecha">
             <h3>Contacto</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum modi tempore iure tenetur cupiditate
-                architecto quo, id facere expedita, animi quis veniam earum iusto nulla ullam rem adipisci? Id, eveniet.
+            <p>
+                ¡Queremos saber de ti! Si tienes preguntas, comentarios o necesitas más información sobre nuestros
+                productos, te invitamos a llenar el formulario de contacto. Tu opinión es importante para nosotros y
+                estaremos encantados de ayudarte. ¡Escríbenos y recibe una respuesta personalizada!
             </p>
-            <img src="https://www.svgrepo.com/show/521128/email-1.svg" alt="email">
+            <img src="src/images/mail.svg" alt="email">
         </div>
         <form>
             <label for="nombre">Nombre:</label>
@@ -133,7 +127,7 @@
         </form>
     </div>
 
-    <footer id="footer">
+    <footer id="footer" class="color1">
         <div class="footer-content">
             <div class="footer-contacto">
                 <h3>Contáctanos</h3>
